# ltr_license_scraper_portland

./: .gitignore  .pre-commit-config.yaml  README.md  data.json  downloader.py  license_downloader.py  pyproject.toml  requirements.txt  saved.csv
.github/workflows/: devskim.yml  mypy.yml  python.yml  ruff.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_api_payloads_py.html  z_145eef247bfb46b6_license_downloader_py.html
src/: api_payloads.py  license_downloader.py
tests/: test_scrape_license_list.py
tests/cassettes/test_scrape_license_list/: license_details.yaml  license_list.yaml
