[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
extend-select = ["B", "W", "C"]
ignore = ["C400", "C401"]

[project]
name = "ltr_license_scraper_portland_maine"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.10"
license = { "file" = "LICENSE" }
authors = [{ "name" = "bmos", "email" = "wil.t.dsa@pm.me" }]
urls = { "GitHub" = "https://github.com/MaineDSA/ltr_license_scraper_portland" }
dependencies = [
    "pandas==2.2.3",
    "requests==2.32.3",
    "tqdm==4.67.1",
]

[project.optional-dependencies]
dev = [
    "mypy==1.15.0",
    "pandas-stubs==2.2.3.250308",
    "pre-commit==4.1.0",
    "ruff==0.9.9",
    "types-requests==2.32.0.20250301",
    "types-tqdm==4.67.0.20250301"
]
github-actions = [
    "ruff==0.9.9",
    "ydiff==1.4.2"
]
