[project]
name = "ltr_license_scraper_portland_maine"
version = "1.0.1"
readme = "README.md"
requires-python = ">=3.10"
license = { "file" = "LICENSE" }
authors = [{ "name" = "bmos", "email" = "wil.t.dsa@pm.me" }]
urls = { "GitHub" = "https://github.com/MaineDSA/ltr_license_scraper_portland" }
dependencies = [
    "pandas==2.2.3",
    "requests==2.32.3",
    "tqdm==4.67.1",
]

[project.optional-dependencies]
dev = [
    "bandit[toml,sarif]==1.8.3",
    "mypy==1.16.0",
    "pandas-stubs==2.2.3.250527",
    "pre-commit==4.2.0",
    "ruff==0.11.7",
    "types-requests==2.32.0.20250515",
    "types-tqdm==4.67.0.20250516"
]

[tool.ruff]
line-length = 160
target-version = "py310"
include = [
    "src/**/*.py",
    "tests/**/*.py",
]

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "C",
    "C4",
    "C90",
    "D",
    "DTZ",
    "E",
    "EM",
    "F",
    "G",
    "I",
    "ICN",
    "ISC",
    "LOG",
    "N",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "T20",
    "TC",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "D100",
    "D103",
    "D104",
    "D203",
    "D212",
]

[tool.bandit]
exclude_dirs = [
    "./tests/",
    "./.venv/",
]
